# physics-sim

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  ISSUES.md  PROGRESS.md  README.md  ROADMAP.md  vcpkg.json
.github/workflows/: windows.yml
docs/: TRACKING.md  audio-acceptance-2026-07-11.md  boundary-interaction.md  challenge-acceptance-2026-07-11.md  complete-sandbox-acceptance-2026-07-11.md  deferred-feature-disposition.md  device-restoration-acceptance-2026-07-11.md  diagnostics.md  finished-game-polish-roadmap.md  fluid-realism-roadmap.md  gallery-acceptance-2026-07-11.md  manual-verification-checklist.md  particle-regularization-2026-07-11.md  performance-budget.md  physics-accuracy-contract.md  physics-known-limitations.md  recovery-architecture.md  recovery-physics-validation.md  release-notes-0.2.0-alpha.1.md  release-notes-0.2.0-alpha.2.md  release-packaging.md  replay-regression.md  scene-format.md  scene-gallery.md  scene-metadata.md  user-settings.md  visual-style.md  water-feel-baseline-2026-07-11.md  water-lifecycle.md  water-visual-effects-2026-07-11.md
docs/adr/: 0001-solver-approach.md  0002-scene-format.md  0003-tracking-architecture.md  0004-accuracy-first-fluid-quality.md  0005-finished-game-presentation-direction.md  0006-physics-accurate-particle-interaction.md  0007-recovery-dual-mode-product.md  0008-compiled-module-boundaries.md  0009-sdl-imgui-ui-boundary.md  0010-breaking-recovery-formats.md  0011-tiered-verification.md  README.md
docs/baselines/: baseline-summary.schema.json  recovery-baseline-2026-07-10.md
docs/history/: pre-recovery-snapshot.md
docs/reviews/: recovery-sandbox-acceptance-2026-07-10.md  recovery-visual-acceptance-2026-07-10.md  water-feel-acceptance-2026-07-11.md
docs/superpowers/plans/: 2026-06-04-fluid-quality-and-polish-backlog.md
gallery/: gallery.manifest
include/physics_sim/: action.hpp  application.hpp  audio_feedback.hpp  audio_mixer.hpp  challenge_objective.hpp  debug_overlay.hpp  feedback.hpp  fixed_timestep.hpp  fluid_cell_classification.hpp  fluid_density.hpp  fluid_particle.hpp  fluid_quality.hpp  gallery_manifest.hpp  grid_transfer.hpp  indexing.hpp  input_bindings.hpp  lab_application.hpp  mac_grid.hpp  math.hpp  mode_switch.hpp  player_feedback.hpp  player_guidance.hpp  replay_script.hpp  save_browser.hpp  scene_controller.hpp  scene_document.hpp  scene_viewport.hpp  session_shell.hpp  settings_menu.hpp  simulation.hpp  simulation_state.hpp  solver_profile.hpp  surface_reconstruction.hpp  tutorial_progress.hpp  ui_palette.hpp  user_settings.hpp  visual_mode.hpp  water_feel_metrics.hpp  water_simulation.hpp  water_state.hpp  (+1 more)
regression/: README.md  fluid_quality_suite.psd1  replay_suite.psd1
regression/replays/: challenge_fill.replay  challenge_gate.replay  challenge_pump_valve.replay  demo-add-directional.replay  demo-add-omni.replay  demo-tool-wall.replay  recovery-basin.replay
scenes/: challenge_gate.pscene  challenge_pump_valve.pscene  demo_scene.pscene  device_playground.pscene  free_fall.pscene  future_device.pscene  hose_wall_impact.pscene  objective_fill.pscene  omni_spray.pscene  starter_basin.pscene  tutorial_intro.pscene
scripts/: build.ps1  capture-recovery-baseline.ps1  capture-recovery-contact-sheet.ps1  check-dependencies.ps1  check-hygiene.ps1  check-tracking.ps1  configure.ps1  install-git-hooks.ps1  measure-device-overhead.ps1  measure-water-solver.ps1  package-release.ps1  run-lab-smoke.ps1  run-smoke.ps1  test-git-hooks.ps1  test.ps1  verify-all.ps1  verify-audio.ps1  verify-challenges.ps1  verify-demo-scene-density.ps1  verify-demo-scene-surface.ps1  verify-demo-scene.ps1  verify-fluid-quality-suite.ps1  verify-gallery.ps1  verify-packaged-acceptance.ps1  verify-recovery-basin-density.ps1  verify-recovery-basin-mode.ps1  verify-recovery-basin-surface.ps1  verify-recovery-basin.ps1  verify-replay-suite.ps1  verify-tutorial-mode.ps1
scripts/git-hooks/: commit-msg  pre-commit  pre-push  run-hook.ps1
src/: main.cpp
src/app/: application.cpp  audio_mixer.cpp  surface_reconstruction.cpp  water_visual_effects.cpp
src/content/: content_module.cpp
src/core/: simulation.cpp  water_feel_metrics.cpp
src/lab/: lab_module.cpp
tests/: audio_feedback_tests.cpp  challenge_objective_tests.cpp  debug_overlay_tests.cpp  device_overhead_benchmark.cpp  device_runtime_tests.cpp  editor_controls_tests.cpp  feedback_tests.cpp  fluid_quality_tests.cpp  input_bindings_tests.cpp  math_tests.cpp  player_feedback_tests.cpp  player_guidance_tests.cpp  replay_script_tests.cpp  save_browser_tests.cpp  scene_gallery_tests.cpp  scene_persistence_tests.cpp  session_shell_tests.cpp  settings_menu_tests.cpp  simulation_api_tests.cpp  surface_reconstruction_tests.cpp  tutorial_progress_tests.cpp  tutorial_scene_tests.cpp  ui_palette_tests.cpp  user_settings_tests.cpp  visual_mode_tests.cpp  wall_editing_tests.cpp  water_feel_metrics_tests.cpp  water_simulation_tests.cpp  water_solver_benchmark.cpp  water_visual_effects_tests.cpp
